--- a/spire/rbac/serviceaccounts.yaml
+++ b/spire/rbac/serviceaccounts.yaml
@@ -15,5 +15,5 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: spire-oidc
-  namespace: spire-oidc
+  name: oidc-provider
+  namespace: oidc-provider
