--- a/spire/services/spire-oidc.yaml
+++ b/spire/services/spire-oidc.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spire-oidc
-  namespace: spire-oidc
+  name: oidc-provider
+  namespace: oidc-provider
 spec:
   type: NodePort
   selector:
