--- a/spire/deployments/spire-server.yaml
+++ b/spire/deployments/spire-server.yaml
@@ -54,6 +54,7 @@ spec:
         - name: spire-controller-manager
 #          image: ghcr.io/spiffe/spire-controller-manager:0.6.0
           image: docker.io/fengyu225/spire-controller-manager:latest
+          imagePullPolicy: Always
           args: ["--config=spire-controller-manager-config.yaml"]
           ports:
             - containerPort: 9443
